input fix bug add gap on example component

--- a/src/assets/examples/input-form/input-form.component.css
+++ b/src/assets/examples/input-form/input-form.component.css
@@ -8,6 +8,7 @@
 
 .example-full-width {
   width: 100%;
+  margin-bottom: 4px;
 }
 
 td {
