--- a/src/assets/examples/input-overview/input-overview.component.css
+++ b/src/assets/examples/input-overview/input-overview.component.css
@@ -6,4 +6,5 @@
 
 .example-full-width {
   width: 100%;
+  margin-bottom: 36px;
 }
